webextensions/sidebar/styles/square/systemcolors.css
@import url("base.css");
@import url("border.css");

:root {
    background: InactiveBorder;
}

#tabbar {
    border: none;
}


/*        Tab         */

.tab,
.newtab-button-box {
    background: ButtonFace;
    border-color: ThreeDHighlight;
    color: ButtonText;
}

.tab.active {
    background: HighLight;
    border-color: HighLight;
    color: HighLightText;
}

.tab:hover,
.newtab-button-box:hover {
    opacity: 0.7;
    /*mix-blend-mode: multiply;*/
}

.tab:not(.collapsed),
.newtab-button-box {
    border-style: solid;
}

.newtab-button-box {
    border-width: 1px;
}



/*        Closebox         */

.tab .closebox {
    margin-top: -10px;
    padding: 3px;
}

.tab .closebox:hover {
    /*color: Highlight;*/
    color: HighlightText;
    background: Highlight;
    opacity: 0.75;
}

.tab.active .closebox:hover {
    color: Highlight;
    background: HighlightText;
    opacity: 0.5;
}

